# libvmod-digest

./: Makefile.am  configure.ac
src/: Makefile.am  vmod_digest.c  vmod_digest.vcc
